# GraphCityOJ

./: .gitignore  README.md  pyproject.toml  test_api.http
app/: config.py  main.py  schemas.py  storage.py
app/api/: admin.py  auth.py  judge.py  logs.py  problems.py  submissions.py  users.py
app/db/: database.py  models.py
app/models/: problem.py  submission.py
app/utils/: auth.py  exceptions.py  judge_engine.py  rate_limiter.py
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py  storage.py
backend/app/api/: admin.py  auth.py  judge.py  logs.py  problems.py  submissions.py  users.py
backend/app/db/: database.py  models.py
backend/app/models/: log.py  user.py
backend/app/utils/: judge_engine.py  rate_limiter.py
backend/problems/1/: config.json  problem.md
backend/problems/2/: config.json  problem.md
backend/problems/3/: 1.in  1.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  17.out  18.in  18.out  19.in  19.out  2.in  2.out  20.in  20.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out  (+2 more)
backend/problems/example/: problem.md
backend/tests/: conftest.py  test_admin.py  test_api_logs.py  test_api_submissions.py  test_submissions.py
frontend/: api.py  app.py  manage.py  requirements.txt
frontend/gcoj_config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/oj/: api_client.py  decorators.py  urls.py  views.py
problems/example/: config.toml
tests/: conftest.py  test_admin.py  test_health.py  test_submissions.py
(+20 files in other folders)
